--- a/teamlabxinflearn/house_prices_regression/house_price_pred.ipynb
+++ b/teamlabxinflearn/house_prices_regression/house_price_pred.ipynb
@@ -2427,11 +2427,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Model"
+   ]
   },
   {
    "cell_type": "code",
@@ -2992,24 +2992,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "XGBoost"
+    "### XGBoost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid_xgb = {'learning_rate' :[0.028,0.03,0.032], 'max_depth' : [3,4,5, 6], \n",
-    "          'n_estimators': [130, 150, 170,],\n",
+    "param_grid_xgb = {'learning_rate' :[0.02,0.028,0.03,0.032], 'max_depth' : [0,3,4,5,6], \n",
+    "          'n_estimators': [140, 150, 160,],\n",
     "          #'reg_alpha':[0.4640], 'reg_lambda': [0.8571],\n",
-    "          'subsample': [0.4 ,0.5213, 0.632], 'random_state' : [7], 'nthread' :  [-1]}"
+    "          'subsample': [0.35, 0.4 ,0.5213, 0.632], 'nthread' :  [-1]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3019,20 +3019,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 108 candidates, totalling 540 fits\n"
+      "Fitting 5 folds for each of 240 candidates, totalling 1200 fits\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-26 {color: black;background-color: white;}#sk-container-id-26 pre{padding: 0;}#sk-container-id-26 div.sk-toggleable {background-color: white;}#sk-container-id-26 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-26 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-26 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-26 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-26 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-26 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-26 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-26 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-26 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-26 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-26 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-26 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-26 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-26 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-26 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-26 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-26 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-26 div.sk-item {position: relative;z-index: 1;}#sk-container-id-26 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-26 div.sk-item::before, #sk-container-id-26 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-26 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-26 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-26 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-26 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-26 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-26 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-26 div.sk-label-container {text-align: center;}#sk-container-id-26 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-26 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-26\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=5,\n",
+       "<style>#sk-container-id-28 {color: black;background-color: white;}#sk-container-id-28 pre{padding: 0;}#sk-container-id-28 div.sk-toggleable {background-color: white;}#sk-container-id-28 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-28 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-28 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-28 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-28 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-28 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-28 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-28 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-28 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-28 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-28 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-28 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-28 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-28 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-28 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-28 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-28 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-28 div.sk-item {position: relative;z-index: 1;}#sk-container-id-28 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-28 div.sk-item::before, #sk-container-id-28 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-28 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-28 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-28 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-28 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-28 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-28 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-28 div.sk-label-container {text-align: center;}#sk-container-id-28 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-28 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-28\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=5,\n",
        "             estimator=XGBRegressor(base_score=None, booster=None,\n",
        "                                    callbacks=None, colsample_bylevel=None,\n",
        "                                    colsample_bynode=None,\n",
@@ -3050,12 +3050,11 @@
        "                                    predictor=None, random_state=None,\n",
        "                                    reg_alpha=None, reg_lambda=None, ...),\n",
        "             n_jobs=-1,\n",
-       "             param_grid={&#x27;learning_rate&#x27;: [0.028, 0.03, 0.032],\n",
-       "                         &#x27;max_depth&#x27;: [3, 4, 5, 6],\n",
-       "                         &#x27;n_estimators&#x27;: [130, 150, 170], &#x27;nthread&#x27;: [-1],\n",
-       "                         &#x27;random_state&#x27;: [7],\n",
-       "                         &#x27;subsample&#x27;: [0.4, 0.5213, 0.632]},\n",
-       "             verbose=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-74\" type=\"checkbox\" ><label for=\"sk-estimator-id-74\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=5,\n",
+       "             param_grid={&#x27;learning_rate&#x27;: [0.02, 0.028, 0.03, 0.032],\n",
+       "                         &#x27;max_depth&#x27;: [0, 3, 4, 5, 6],\n",
+       "                         &#x27;n_estimators&#x27;: [140, 150, 160], &#x27;nthread&#x27;: [-1],\n",
+       "                         &#x27;subsample&#x27;: [0.35, 0.4, 0.5213, 0.632]},\n",
+       "             verbose=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-80\" type=\"checkbox\" ><label for=\"sk-estimator-id-80\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=5,\n",
        "             estimator=XGBRegressor(base_score=None, booster=None,\n",
        "                                    callbacks=None, colsample_bylevel=None,\n",
        "                                    colsample_bynode=None,\n",
@@ -3073,12 +3072,11 @@
        "                                    predictor=None, random_state=None,\n",
        "                                    reg_alpha=None, reg_lambda=None, ...),\n",
        "             n_jobs=-1,\n",
-       "             param_grid={&#x27;learning_rate&#x27;: [0.028, 0.03, 0.032],\n",
-       "                         &#x27;max_depth&#x27;: [3, 4, 5, 6],\n",
-       "                         &#x27;n_estimators&#x27;: [130, 150, 170], &#x27;nthread&#x27;: [-1],\n",
-       "                         &#x27;random_state&#x27;: [7],\n",
-       "                         &#x27;subsample&#x27;: [0.4, 0.5213, 0.632]},\n",
-       "             verbose=1)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-75\" type=\"checkbox\" ><label for=\"sk-estimator-id-75\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
+       "             param_grid={&#x27;learning_rate&#x27;: [0.02, 0.028, 0.03, 0.032],\n",
+       "                         &#x27;max_depth&#x27;: [0, 3, 4, 5, 6],\n",
+       "                         &#x27;n_estimators&#x27;: [140, 150, 160], &#x27;nthread&#x27;: [-1],\n",
+       "                         &#x27;subsample&#x27;: [0.35, 0.4, 0.5213, 0.632]},\n",
+       "             verbose=1)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-81\" type=\"checkbox\" ><label for=\"sk-estimator-id-81\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
        "             colsample_bylevel=None, colsample_bynode=None,\n",
        "             colsample_bytree=None, early_stopping_rounds=None,\n",
        "             enable_categorical=False, eval_metric=None, gamma=None,\n",
@@ -3088,7 +3086,7 @@
        "             max_leaves=None, min_child_weight=None, missing=nan,\n",
        "             monotone_constraints=None, n_estimators=100, n_jobs=None,\n",
        "             num_parallel_tree=None, predictor=None, random_state=None,\n",
-       "             reg_alpha=None, reg_lambda=None, ...)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-76\" type=\"checkbox\" ><label for=\"sk-estimator-id-76\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
+       "             reg_alpha=None, reg_lambda=None, ...)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-82\" type=\"checkbox\" ><label for=\"sk-estimator-id-82\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
        "             colsample_bylevel=None, colsample_bynode=None,\n",
        "             colsample_bytree=None, early_stopping_rounds=None,\n",
        "             enable_categorical=False, eval_metric=None, gamma=None,\n",
@@ -3119,15 +3117,14 @@
        "                                    predictor=None, random_state=None,\n",
        "                                    reg_alpha=None, reg_lambda=None, ...),\n",
        "             n_jobs=-1,\n",
-       "             param_grid={'learning_rate': [0.028, 0.03, 0.032],\n",
-       "                         'max_depth': [3, 4, 5, 6],\n",
-       "                         'n_estimators': [130, 150, 170], 'nthread': [-1],\n",
-       "                         'random_state': [7],\n",
-       "                         'subsample': [0.4, 0.5213, 0.632]},\n",
+       "             param_grid={'learning_rate': [0.02, 0.028, 0.03, 0.032],\n",
+       "                         'max_depth': [0, 3, 4, 5, 6],\n",
+       "                         'n_estimators': [140, 150, 160], 'nthread': [-1],\n",
+       "                         'subsample': [0.35, 0.4, 0.5213, 0.632]},\n",
        "             verbose=1)"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3138,21 +3135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'learning_rate': 0.028,\n",
+       "{'learning_rate': 0.032,\n",
        " 'max_depth': 5,\n",
        " 'n_estimators': 150,\n",
        " 'nthread': -1,\n",
-       " 'random_state': 7,\n",
-       " 'subsample': 0.4}"
+       " 'subsample': 0.35}"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,16 +3159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8952328456976222"
+       "0.9032779299933499"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
