--- a/DL/teamlab/torch_basics.ipynb
+++ b/DL/teamlab/torch_basics.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -40,7 +40,17 @@
     "id": "n-yIqv1oN5jB",
     "outputId": "77ca8138-6409-418e-c442-6df1ecda0961"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "ndim : 2 shape : (2, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "n_array = np.arange(10).reshape(2,5)\n",
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -69,7 +79,17 @@
     "id": "2Mk4ZVPTN5jC",
     "outputId": "2f43272b-d563-4846-a60a-9fbf2ac52a37"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 1., 2., 3., 4.],\n",
+      "        [5., 6., 7., 8., 9.]])\n",
+      "ndim : 2 shape : torch.Size([2, 5])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "t_array = torch.FloatTensor(n_array)\n",
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -98,7 +118,17 @@
     "id": "EChYHuaJN5jC",
     "outputId": "fae52a48-3beb-4276-a491-e595d7d0b1d4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 5])\n",
+      "2\n",
+      "torch.Size([2, 5])\n"
+     ]
+    }
+   ],
    "source": [
     "print(t_array.shape)\n",
     "print(t_array.ndim)\n",
@@ -125,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -144,7 +174,19 @@
     "id": "CZO3U_q0N5jE",
     "outputId": "04542082-0e98-4dba-be5b-9f1987470fa9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 3,  5],\n",
+       "        [10,  5]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [[3, 5],[10, 5]]\n",
     "x_data = torch.tensor(data)\n",
@@ -162,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -181,7 +223,19 @@
     "id": "fZlYQE8UN5jF",
     "outputId": "6f089c11-aea4-4272-8f0c-6de02a1019e2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 3,  5],\n",
+       "        [10,  5]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nd_array_ex = np.array(data)\n",
     "tensor_array = torch.from_numpy(nd_array_ex)\n",
@@ -199,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -222,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -241,14 +295,26 @@
     "id": "_MIE_WChN5jG",
     "outputId": "329c803a-deef-4ad2-fc88-6e167d89a975"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[10,  5, 50],\n",
+       "        [ 1,  5, 10]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -267,14 +333,26 @@
     "id": "xSNKQBigN5jG",
     "outputId": "54eea341-8fe6-413c-9a93-b90eb8035670"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 5, 20],\n",
+       "        [ 5, 50]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data[:2, 1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -293,14 +371,25 @@
     "id": "hZp5ATcrN5jG",
     "outputId": "8626d191-e41b-4e0f-b5a5-a9230e6e33d0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 3,  5, 20, 10,  5, 50,  1,  5, 10])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data.flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -319,14 +408,27 @@
     "id": "8SQL9E4bN5jH",
     "outputId": "83d7d475-6255-45ea-afd0-9678060e3d8b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1],\n",
+       "        [1, 1, 1],\n",
+       "        [1, 1, 1]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.ones_like(x_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -345,14 +447,27 @@
     "id": "Y0-19-MCN5jH",
     "outputId": "2222134e-6ff8-497b-8372-3b3042436a48"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  5, 20],\n",
+       "       [10,  5, 50],\n",
+       "       [ 1,  5, 10]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data.numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -371,14 +486,25 @@
     "id": "ehyPgwq9N5jH",
     "outputId": "e5883b7d-943b-4dd2-9e89-bba7a77c0818"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 3])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -397,14 +523,25 @@
     "id": "IPIgOMdSN5jH",
     "outputId": "07a95629-a3a3-4c06-a897-fa7643e817ad"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -423,7 +560,18 @@
     "id": "ib8WvWNlN5jI",
     "outputId": "b715322e-f9f3-4a32-81b1-228e0e334e14"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_data.device"
    ]
@@ -437,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -456,7 +604,18 @@
     "id": "JBsc29RPN5jI",
     "outputId": "ec4c8b9c-44b9-4c15-fd73-ef6ded3e31f3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda', index=0)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if torch.cuda.is_available():\n",
     "    x_data_cuda = x_data.to('cuda')\n",
@@ -483,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -502,7 +661,24 @@
     "id": "wjkgqGuFN5jJ",
     "outputId": "99e65ca5-88f3-47d5-ee04-709e74c17b92"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.0538, 0.3031],\n",
+       "         [0.8753, 0.4566],\n",
+       "         [0.8307, 0.2894]],\n",
+       "\n",
+       "        [[0.4260, 0.8362],\n",
+       "         [0.9109, 0.5566],\n",
+       "         [0.4056, 0.5549]]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tensor_ex = torch.rand(size=(2, 3, 2))\n",
     "tensor_ex"
@@ -510,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -529,14 +705,26 @@
     "id": "r3DJdCu8N5jJ",
     "outputId": "2ce26b62-6efb-453f-b9cd-b7f2dd2f8611"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0538, 0.3031, 0.8753, 0.4566, 0.8307, 0.2894],\n",
+       "        [0.4260, 0.8362, 0.9109, 0.5566, 0.4056, 0.5549]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tensor_ex.view([-1, 6]) # 데이터의 연속성 보장"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -555,14 +743,26 @@
     "id": "oTocEenZN5jJ",
     "outputId": "bf3e221c-ebdd-463e-ac75-44bb01c77d8c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0538, 0.3031, 0.8753, 0.4566, 0.8307, 0.2894],\n",
+       "        [0.4260, 0.8362, 0.9109, 0.5566, 0.4056, 0.5549]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tensor_ex.reshape([-1,6]) # 메모리를 실제 변형, 필요에 따라 메모리 복사해서 새로 할당(메모리 연결성이 끊기게 됨)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -581,7 +781,20 @@
     "id": "4wBPOpKEN5jK",
     "outputId": "1c7635fd-96f6-43cd-b790-e8174c717cbf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = torch.zeros(3, 2)\n",
     "b = a.view(2, 3)\n",
@@ -590,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -609,14 +822,27 @@
     "id": "qCHlyd2zN5jK",
     "outputId": "02e188bd-b3c7-42bb-a3dd-161ebed91219"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -635,14 +861,26 @@
     "id": "Hqj0bZl-N5jK",
     "outputId": "dca72c70-3a5c-4348-e3e1-ac4e35bb4f97"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1.],\n",
+       "        [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -661,16 +899,29 @@
     "id": "Kqox9_YgN5jL",
     "outputId": "a5822a85-3ffd-4345-ec32-71ce1be22a79"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = torch.zeros(3, 2)\n",
-    "b = a.t().reshape(6)\n",
-    "a.fill_(1)"
+    "aa = torch.zeros(3, 2)\n",
+    "bb = aa.t().reshape(6)\n",
+    "aa.fill_(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -689,14 +940,27 @@
     "id": "wnO-K6RGN5jL",
     "outputId": "9be69b32-c7d0-461c-d763-8858270bdec1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a"
+    "aa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -715,14 +979,25 @@
     "id": "DYBdLyZIN5jL",
     "outputId": "2816b658-4abe-4948-9547-59c0fe5ad8e8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "b"
+    "bb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -741,15 +1016,49 @@
     "id": "jgWpOvajN5jM",
     "outputId": "c10bfe9b-91fa-43c1-9905-313b227035b3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.8733, 0.7753]],\n",
+       "\n",
+       "        [[0.0695, 0.6517]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tensor_ex = torch.rand(size=(2, 1, 2))\n",
-    "tensor_ex.squeeze()"
+    "tensor_ex = torch.rand(size=(2, 1, 2)) # 1행 2열 2개\n",
+    "tensor_ex\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5567, 0.8303],\n",
+       "        [0.8810, 0.3858]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_ex.squeeze(1) # 알아서 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -768,15 +1077,48 @@
     "id": "buapxNy2N5jM",
     "outputId": "b7f3571e-d3bf-4a09-e0b8-06cfa97da2f9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5567, 0.8303],\n",
+       "        [0.8810, 0.3858]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tensor_ex = torch.rand(size=(2, 2))\n",
-    "tensor_ex.unsqueeze(0).shape"
+    "tensor_ex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.5567, 0.8303],\n",
+       "         [0.8810, 0.3858]]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_ex.unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -795,14 +1137,27 @@
     "id": "8Cr3Sk1zN5jM",
     "outputId": "51df699f-dfec-4b72-bd26-aed2299c819c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.5567, 0.8303]],\n",
+       "\n",
+       "        [[0.8810, 0.3858]]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tensor_ex.unsqueeze(1).shape"
+    "tensor_ex.unsqueeze(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -821,9 +1176,24 @@
     "id": "nytJgSjON5jM",
     "outputId": "b8ecc206-6884-4633-baac-0ce5dc5d6d20"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.5567],\n",
+       "         [0.8303]],\n",
+       "\n",
+       "        [[0.8810],\n",
+       "         [0.3858]]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tensor_ex.unsqueeze(2).shape"
+    "tensor_ex.unsqueeze(2)"
    ]
   },
   {
@@ -1824,7 +2194,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Lablup FF 20.07 on Python 3.6 (CUDA 10.1)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1838,7 +2208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.14"
   }
  },
  "nbformat": 4,
